openshift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open
spec:
  replicas: 2
  selector:
    matchLabels:
      app: open
  template:
    metadata:
      labels:
        app: open
    spec:
      containers:
        - name: open
          image: kirillvelichko/open:latest
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
          readinessProbe:
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            tcpSocket:
              port: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 0%
