openshift/app1-service.yml
kind: Service
apiVersion: v1
metadata:
  name: app1-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: app1
