openshift/app-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app-route
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: app1.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  to:
    kind: Service
    name: app1-service
